macOS: better intermediate cert assertions #3